samples/_failures_safe/1761643130_c600a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed7d6a8b.c: In function ‘main’:
./samples/SAFE/__tmp_ed7d6a8b.c:149:66: error: ‘MAX’ undeclared (first use in this function)
  149 |     mat2.cols = read_int("Enter number of columns (1-100): ", 1, MAX
      |                                                                  ^~~
./samples/SAFE/__tmp_ed7d6a8b.c:149:66: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ed7d6a8b.c:149:69: error: expected ‘)’ at end of input
  149 |     mat2.cols = read_int("Enter number of columns (1-100): ", 1, MAX
      |                         ~                                           ^
      |                                                                     )
./samples/SAFE/__tmp_ed7d6a8b.c:149:5: error: expected declaration or statement at end of input
  149 |     mat2.cols = read_int("Enter number of columns (1-100): ", 1, MAX
      |     ^~~~
